fix h2 alignment

--- a/src/Pages/Gallery/Components/expandableCard.module.css
+++ b/src/Pages/Gallery/Components/expandableCard.module.css
@@ -2,7 +2,7 @@
    position: relative;
    margin-top: 2px;
    left: 50%;
-   transform: translateX(-50%);
+   transform: translateX(-42%);
    width: 320px;
    background-image: url(../Assets/pill-icon.png);
    background-size: cover;
